--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="favicon.ico">
 </head>
 <body>
+    <a href="https://ehcfbi.github.io/Pikko-Videos/"><img src="logo.png" alt="logo"></a>
     <h1>Pikko Videos</h1>
     <p>These videos are videos created by Pikko.</p>
       
