--- a/videos/What's_Pikko_Videos/What's_Pikko_Videos.html
+++ b/videos/What's_Pikko_Videos/What's_Pikko_Videos.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="favicon.ico">
 </head>
 <body>
-    <a href="https://ehcfbi.github.io/Pikko-Videos/"><img src="Pikko_Videos/logo.png" alt="logo"></a>
+    <a href="https://ehcfbi.github.io/Pikko-Videos/"><img src="Pikko_Videos/logo.png" alt="logo" width="200" height="100"></a>
     <h1>What's Pikko Videos?</h1>
 </body>
 </html>
