--- a/videos/first_video/first_video.html
+++ b/videos/first_video/first_video.html
@@ -9,5 +9,6 @@
 <body>
     <a href="https://ehcfbi.github.io/Pikko-Videos/"><img src="logo.png" alt="logo" width="200" height="100"></a>
     <h1>first video</h1>
+    <video src="video.mp4"></video>
 </body>
 </html>
