--- a/videos/first_video/first_video.html
+++ b/videos/first_video/first_video.html
@@ -9,6 +9,6 @@
 <body>
     <a href="https://ehcfbi.github.io/Pikko-Videos/"><img src="logo.png" alt="logo" width="200" height="100"></a>
     <h1>first video</h1>
-    <video src="video.mp4" controls></video>
+    <video src="video.mp4" controls width="240" height="135" style="border:solid 1px #000000"></video>
 </body>
 </html>
