--- a/videos/first_video/first_video.html
+++ b/videos/first_video/first_video.html
@@ -50,7 +50,7 @@
             const name = document.getElementById('name').value;
             const comment = document.getElementById('comment').value;
 
-            fetch('http://192.168.3.11:3000/comments', {
+            fetch('http://localhost:3000/comments', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
@@ -63,7 +63,7 @@
         });
 
         window.onload = function() {
-            fetch('http://192.168.3.11:3000/comments')
+            fetch('http://localhost:3000/comments')
                 .then(response => response.json())
                 .then(data => {
                     data.forEach(comment => {
@@ -84,11 +84,11 @@
         }
 
         function deleteComment(id) {
-            fetch(`http://192.168.3.11:3000/comments/${id}`, {
+            fetch(`http://localhost:3000/comments/${id}`, {
                 method: 'DELETE'
             }).then(() => {
                 document.getElementById('commentsSection').innerHTML = '';
-                fetch('http://192.168.3.11:3000/comments')
+                fetch('http://localhost:3000/comments')
                     .then(response => response.json())
                     .then(data => {
                         data.forEach(comment => {
