--- a/videos/first_video/first_video.html
+++ b/videos/first_video/first_video.html
@@ -66,13 +66,16 @@
         // ページロード時にコメントを取得して表示
         window.onload = function() {
             const videoId = document.getElementById('videoId').value; // 動画IDをここで設定
+            console.log(`Fetching comments for videoId: ${videoId}`);
             fetch(`https://fc93-2400-2411-84a0-6400-dd0b-99fd-ec77-97e9.ngrok-free.app/comments/${videoId}`)
                 .then(response => response.json())
                 .then(data => {
+                    console.log('Comments fetched:', data);
                     data.forEach(comment => {
                         addCommentToDOM(comment);
                     });
-                }).catch(error => console.error('Error fetching comments:', error));
+                })
+                .catch(error => console.error('Error fetching comments:', error));
         }
 
         function addCommentToDOM(comment) {
