--- a/videos/first_video/first_video.html
+++ b/videos/first_video/first_video.html
@@ -65,7 +65,7 @@
 
         // ページロード時にコメントを取得して表示
         window.onload = function() {
-    const videoId = document.getElementById('first').value; // 動画IDをここで設定
+    const videoId = document.getElementById('videoId').value; // 動画IDをここで設定
     console.log(`Fetching comments for videoId: ${videoId}`);
     fetch(`https://fc93-2400-2411-84a0-6400-dd0b-99fd-ec77-97e9.ngrok-free.app/comments/${videoId}`)
         .then(response => {
@@ -83,7 +83,6 @@
         .catch(error => console.error('Error fetching comments:', error));
 }
 
-
         function addCommentToDOM(comment) {
             const commentBox = document.createElement('div');
             commentBox.className = 'comment-box';
@@ -100,7 +99,7 @@
                 method: 'DELETE'
             }).then(() => {
                 document.getElementById('commentsSection').innerHTML = '';
-                const videoId = document.getElementById('first').value; // 動画IDをここで設定
+                const videoId = document.getElementById('videoId').value; // 動画IDをここで設定
                 fetch(`https://fc93-2400-2411-84a0-6400-dd0b-99fd-ec77-97e9.ngrok-free.app/comments/${videoId}`)
                     .then(response => response.json())
                     .then(data => {
