--- a/videos/first_video/first_video.html
+++ b/videos/first_video/first_video.html
@@ -65,23 +65,23 @@
 
         // ページロード時にコメントを取得して表示
         window.onload = function() {
-    const videoId = document.getElementById('videoId').value; // 動画IDをここで設定
-    console.log(`Fetching comments for videoId: ${videoId}`);
-    fetch(`https://fc93-2400-2411-84a0-6400-dd0b-99fd-ec77-97e9.ngrok-free.app/comments/${videoId}`)
-        .then(response => {
-            if (!response.ok) {
-                throw new Error('Network response was not ok ' + response.statusText);
+            const videoIdElement = document.getElementById('videoId');
+            if (videoIdElement) {
+                const videoId = videoIdElement.value; // 動画IDをここで設定
+                console.log(`Fetching comments for videoId: ${videoId}`);
+                fetch(`https://fc93-2400-2411-84a0-6400-dd0b-99fd-ec77-97e9.ngrok-free.app/comments/${videoId}`)
+                    .then(response => response.json())
+                    .then(data => {
+                        console.log('Comments fetched:', data);
+                        data.forEach(comment => {
+                            addCommentToDOM(comment);
+                        });
+                    })
+                    .catch(error => console.error('Error fetching comments:', error));
+            } else {
+                console.error('videoId element not found');
             }
-            return response.json();
-        })
-        .then(data => {
-            console.log('Comments fetched:', data);
-            data.forEach(comment => {
-                addCommentToDOM(comment);
-            });
-        })
-        .catch(error => console.error('Error fetching comments:', error));
-}
+        }
 
         function addCommentToDOM(comment) {
             const commentBox = document.createElement('div');
@@ -99,14 +99,19 @@
                 method: 'DELETE'
             }).then(() => {
                 document.getElementById('commentsSection').innerHTML = '';
-                const videoId = document.getElementById('videoId').value; // 動画IDをここで設定
-                fetch(`https://fc93-2400-2411-84a0-6400-dd0b-99fd-ec77-97e9.ngrok-free.app/comments/${videoId}`)
-                    .then(response => response.json())
-                    .then(data => {
-                        data.forEach(comment => {
-                            addCommentToDOM(comment);
+                const videoIdElement = document.getElementById('videoId');
+                if (videoIdElement) {
+                    const videoId = videoIdElement.value; // 動画IDをここで設定
+                    fetch(`https://fc93-2400-2411-84a0-6400-dd0b-99fd-ec77-97e9.ngrok-free.app/comments/${videoId}`)
+                        .then(response => response.json())
+                        .then(data => {
+                            data.forEach(comment => {
+                                addCommentToDOM(comment);
+                            });
                         });
-                    });
+                } else {
+                    console.error('videoId element not found');
+                }
             }).catch(error => console.error('Error deleting comment:', error));
         }
     </script>
