--- a/videos/first_video/first_video.html
+++ b/videos/first_video/first_video.html
@@ -65,52 +65,56 @@
 
         // ページロード時にコメントを取得して表示
         window.onload = function() {
-            const videoIdElement = document.getElementById('videoId');
-            if (videoIdElement) {
-                const videoId = videoIdElement.value; // 動画IDをここで設定
-                console.log(`Fetching comments for videoId: ${videoId}`);
-                fetch(`https://26c5-2400-2411-84a0-6400-dd0b-99fd-ec77-97e9.ngrok-free.app/comments/${videoId}`)
-                    .then(response => response.json())
-                    .then(data => {
-                        console.log('Comments fetched:', data);
-                        data.forEach(comment => {
-                            addCommentToDOM(comment);
-                        });
-                    })
-                    .catch(error => console.error('Error fetching comments:', error));
-            } else {
-                console.error('videoId element not found');
-            }
-        }
+    const videoIdElement = document.getElementById('videoId');
+    if (videoIdElement) {
+        const videoId = videoIdElement.value; // 動画IDをここで設定
+        console.log(`Fetching comments for videoId: ${videoId}`);
+        fetch(`https://fc93-2400-2411-84a0-6400-dd0b-99fd-ec77-97e9.ngrok-free.app/comments/${videoId}`)
+            .then(response => response.json())
+            .then(data => {
+                console.log('Comments fetched:', data);
+                data.forEach(comment => {
+                    addCommentToDOM(comment);
+                });
+            })
+            .catch(error => console.error('Error fetching comments:', error));
+    } else {
+        console.error('videoId element not found');
+    }
+}
 
-        function addCommentToDOM(comment) {
-            const commentBox = document.createElement('div');
-            commentBox.className = 'comment-box';
-            commentBox.innerHTML = `
-                <p><strong>${comment.name}:</strong></p>
-                <p>${comment.comment}</p>
-                <button onclick="deleteComment('${comment._id}')">delete</button>
-            `;
-            document.getElementById('commentsSection').appendChild(commentBox);
-        }
+function addCommentToDOM(comment) {
+    const commentBox = document.createElement('div');
+    commentBox.className = 'comment-box';
+    commentBox.innerHTML = `
+        <p><strong>${comment.name}:</strong></p>
+        <p>${comment.comment}</p>
+        <button onclick="deleteComment('${comment._id}')">delete</button>
+    `;
+    document.getElementById('commentsSection').appendChild(commentBox);
+}
 
-        function deleteComment(id) {
-            fetch(`https://26c5-2400-2411-84a0-6400-dd0b-99fd-ec77-97e9.ngrok-free.app/comments/${id}`, {
-                method: 'DELETE'
-            }).then(() => {
-                document.getElementById('commentsSection').innerHTML = '';
-                const videoIdElement = document.getElementById('videoId');
-                if (videoIdElement) {
-                    const videoId = videoIdElement.value; // 動画IDをここで設定
-                    fetch(`https://26c5-2400-2411-84a0-6400-dd0b-99fd-ec77-97e9.ngrok-free.app/comments/${videoId}`)
-                        .then(response => response.json())
-                        .then(data => {
-                            data.forEach(comment => {
-                                addCommentToDOM(comment);
-                            });
-                        });
-                } else {
-                    console.error('videoId element not found');
+function deleteComment(id) {
+    fetch(`https://fc93-2400-2411-84a0-6400-dd0b-99fd-ec77-97e9.ngrok-free.app/comments/${id}`, {
+        method: 'DELETE'
+    }).then(() => {
+        document.getElementById('commentsSection').innerHTML = '';
+        const videoIdElement = document.getElementById('videoId');
+        if (videoIdElement) {
+            const videoId = videoIdElement.value; // 動画IDをここで設定
+            fetch(`https://fc93-2400-2411-84a0-6400-dd0b-99fd-ec77-97e9.ngrok-free.app/comments/${videoId}`)
+                .then(response => response.json())
+                .then(data => {
+                    data.forEach(comment => {
+                        addCommentToDOM(comment);
+                    });
+                });
+        } else {
+            console.error('videoId element not found');
+        }
+    }).catch(error => console.error('Error deleting comment:', error));
+}
+
                 }
             }).catch(error => console.error('Error deleting comment:', error));
         }
