--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="favicon.ico">
 </head>
 <body>
-    <a href="https://ehcfbi.github.io/Pikko-Videos/"><img src="logo.png" alt="logo" width="200" height="100"></a>
+    <a href="https://videos.bird.f5.si/"><img src="logo.png" alt="logo" width="200" height="100"></a>
     <p><font color="red" size="5">Coming soon...</font></p>
     <h1>Videos</h1>
 </body>
