--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    
     <title>couldn't find the page</title>
 
     <link rel="icon" href="favicon.ico">
@@ -18,7 +18,8 @@
 
     <a href="https://videos.bird.f5.si/"><img src="logo.png" alt="logo" width="200" height="100"></a>
 
-    <h1>Pikko and Pikko Videos couldn't find the page you were looking for.</h1>
+    <p><font color="red" size="5">error 404</font></p>
+    <p>Pikko and Pikko Videos couldn't find the page you were looking for.</p>
 
 </body>
 
