--- a/signup.html
+++ b/signup.html
@@ -7,6 +7,7 @@
   <script src="js/storage.js"></script>
 </head>
 <body>
+  <img src="https://videos.bird.f5.si/logo.png" alt="logo" width="200" height="100">
   <h1>signup</h1>
   <input id="u" placeholder="name"><br>
   <input id="p" type="password" placeholder="password"><br>
