--- a/you.html
+++ b/you.html
@@ -7,6 +7,7 @@
   <script src="js/storage.js"></script>
 </head>
 <body>
+  <img src="https://videos.bird.f5.si/logo.png" alt="logo" width="200" height="100">
   <h1>My page</h1>
   <button onclick="logout()">logout</button>
   <button onclick="removeAccount()">delete this account</button>
