--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <script src="js/storage.js"></script>
 </head>
 <body>
+  <img src="https://videos.bird.f5.si/logo.png" alt="logo" width="200" height="100">
   <h1>channels</h1>
   <div id="userList"></div>
   <script>
