--- a/channel.html
+++ b/channel.html
@@ -6,6 +6,7 @@
   <script src="js/config.js"></script>
 </head>
 <body>
+  <img src="https://videos.bird.f5.si/logo.png" alt="logo" width="200" height="100">
   <div id="content"></div>
   <script>
     const params = new URLSearchParams(location.search);
