--- a/watch.html
+++ b/watch.html
@@ -6,7 +6,7 @@
   <script src="js/config.js"></script>
 </head>
 <body>
-  <img src="https://videos.bird.f5.si/logo.png" alt="logo" width="200" height="100">
+  <a href="https://videos.bird.f5.si/"><img src="logo.png" alt="logo" width="200" height="100"></a>
   <div id="content"></div>
   <script>
     const id = new URLSearchParams(location.search).get("id");
