--- a/signin.html
+++ b/signin.html
@@ -12,6 +12,7 @@
   <input id="password" type="password" placeholder="password"><br>
   <button onclick="signin()">signin</button>
   <p id="message"></p>
+  <p><a href="signup.html">signup</a></p>
 
   <script>
     function signin() {
