--- a/signup.html
+++ b/signup.html
@@ -12,6 +12,7 @@
   <input id="password" type="password" placeholder="password"><br>
   <button onclick="signup()">signup</button>
   <p id="message"></p>
+  <p><a href="signin.html">signin</a></p>
 
   <script>
     function signup() {
