--- a/signin.html
+++ b/signin.html
@@ -37,7 +37,7 @@
       })
       .then(data => {
         Storage.setUser(data.username);
-        location.href = "index.html";
+        location.href = "https://videos.bird.f5.si/";
       })
       .catch(() => {
         msg.textContent = "That name or that password is wrong.";
