--- a/channel.html
+++ b/channel.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>channel - Pikko Videos</title>
   <script src="js/config.js"></script>
+  <link rel="icon" href="favicon.ico">
 </head>
 <body>
   <a href="https://videos.bird.f5.si/"><img src="logo.png" alt="logo" width="200" height="100"></a>
