--- a/signup.html
+++ b/signup.html
@@ -5,6 +5,7 @@
   <title>signup</title>
   <script src="js/config.js"></script>
   <script src="js/storage.js"></script>
+  <link rel="icon" href="favicon.ico">
 </head>
 <body>
   <a href="https://videos.bird.f5.si/"><img src="logo.png" alt="logo" width="200" height="100"></a>
