--- a/watch.html
+++ b/watch.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <a href="https://videos.bird.f5.si/"><img src="logo.png" alt="logo" width="200" height="100"></a>
+  <input type="button" value="share" onclick="copyUrl()">
   <div id="content"></div>
   <script>
     const id = new URLSearchParams(location.search).get("id");
@@ -26,6 +27,11 @@
             `;
           }
         });
+    }
+    
+    function copyUrl() {
+  var url = location.href;
+  navigator.clipboard.writeText(url);
     }
   </script>
 </body>
