--- a/404.html
+++ b/404.html
@@ -18,8 +18,7 @@
 
     <a href="https://videos.bird.f5.si/"><img src="https://videos.bird.f5.si/logo.png" alt="logo" width="200" height="100"></a>
 
-    <p><font color="red" size="5">error 404</font></p>
-    <p>Pikko and Pikko Videos couldn't find the page you were looking for.</p>
+    <p><font color="red">Pikko and Pikko Videos couldn't find the page you were looking for.</font></p>
 
 </body>
 
