--- a/signin.html
+++ b/signin.html
@@ -8,13 +8,13 @@
   <link rel="icon" href="favicon.ico">
 </head>
 <body>
-  <a href="https://videos.bird.f5.si/"><img src="logo.png" alt="logo" width="200" height="100"></a>
+  <a href="https://videos.bird.f5.si"><img src="logo.png" alt="logo" width="200" height="100"></a>
   <h1>signin</h1>
   <input id="username" placeholder="name"><br>
   <input id="password" type="password" placeholder="password"><br>
   <button onclick="signin()">signin</button>
   <p id="message"></p>
-  <p><a href="signup.html">signup</a></p>
+  <p><a href="signup">signup</a></p>
 
   <script>
     function signin() {
@@ -38,7 +38,7 @@
       })
       .then(data => {
         Storage.setUser(data.username);
-        location.href = "https://videos.bird.f5.si/";
+        location.href = "https://videos.bird.f5.si";
       })
       .catch(() => {
         msg.textContent = "That name or that password is wrong.";
