--- a/watch.html
+++ b/watch.html
@@ -7,7 +7,7 @@
   <link rel="icon" href="favicon.ico">
 </head>
 <body>
-  <a href="https://videos.bird.f5.si/"><img src="logo.png" alt="logo" width="200" height="100"></a>
+  <a href="https://videos.bird.f5.si"><img src="logo.png" alt="logo" width="200" height="100"></a>
   <input type="button" value="share" onclick="copyUrl()">
   <div id="content"></div>
   <script>
