--- a/you.html
+++ b/you.html
@@ -8,7 +8,7 @@
   <link rel="icon" href="favicon.ico">
 </head>
 <body>
-  <a href="https://videos.bird.f5.si/"><img src="logo.png" alt="logo" width="200" height="100"></a>
+  <a href="https://videos.bird.f5.si"><img src="logo.png" alt="logo" width="200" height="100"></a>
   <h1>My page</h1>
 
   <button onclick="logout()">logout</button>
@@ -24,11 +24,11 @@
 
   <script>
     const me = Storage.getUser();
-    if (!me) location.href = "signin.html";
+    if (!me) location.href = "signin";
 
     function logout() {
       Storage.clearUser();
-      location.href = "index.html";
+      location.href = "https://videos.bird.f5.si";
     }
 
     function removeAccount() {
@@ -39,7 +39,7 @@
         body: JSON.stringify({ username: me })
       }).then(() => {
         Storage.clearUser();
-        location.href = "index.html";
+        location.href = "https://videos.bird.f5.si";
       });
     }
 
@@ -49,7 +49,7 @@
         .then(videos => {
           const list = videos.map(v =>
             `<div>
-              <a href="watch.html?id=${v.id}">${v.title}</a>
+              <a href="watch?id=${v.id}">${v.title}</a>
               <button onclick="deleteVideo('${v.id}')">delete</button>
             </div>`
           ).join("");
