--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <a href="https://videos.bird.f5.si"><img src="logo.png" alt="logo" width="200" height="100"></a>
-  <a href="you.html">My page</a>
+  <a href="you">My page</a>
   <h1>channels</h1>
   <div id="userList"></div>
   <script>
