--- a/you.html
+++ b/you.html
@@ -10,7 +10,7 @@
 <body>
   <a href="https://videos.bird.f5.si"><img src="logo.png" alt="logo" width="200" height="100"></a>
   <h1>My page</h1>
-  <p id="currentUser"><font size="7" color="purple"></font></p>
+  <font size="7" color="purple"><p id="currentUser"></p></font>
   <button onclick="logout()">logout</button>
   <button onclick="removeAccount()">delete this account</button>
 
