--- a/watch.html
+++ b/watch.html
@@ -25,6 +25,7 @@
             document.getElementById("content").innerHTML = `
               <h1>${info.title} - ${info.username}</h1>
               <video src="${info.url}" controls autoplay></video>
+              <p style="white-space: pre-wrap; margin-top:1em;">${info.description}</p>
             `;
           }
         });
